nldl_derive/tests/ui/serializable/derive-on-struct-fails.stderr
error: proc-macro derive panicked
 --> tests/ui/serializable/derive-on-struct-fails.rs:3:28
  |
3 | #[derive(Debug, PartialEq, NetlinkAttributeSerializable)]
  |                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: NetlinkAttributeSerializable derive may only be used on enums.
