nldl_derive/tests/ui/serializable/derive-on-struct-fails.rs
use nldl_derive::NetlinkAttributeSerializable;

#[derive(Debug, PartialEq, NetlinkAttributeSerializable)]
struct TestStruct {}

fn main() {}
